Adding to .editorconfig