@@ -36,6 +36,8 @@ repositories {
 	maven { url = uri("https://repo.spring.io/snapshot") }
 }
 
+val ktlint by configurations.creating
+
 dependencies {
 	implementation("io.dereknelson.lostcities-cloud:lostcities-common:1.0-SNAPSHOT")
 	implementation("io.dereknelson.lostcities-cloud:lostcities-models:1.0-SNAPSHOT")
@@ -56,9 +58,39 @@ dependencies {
 	implementation("org.springdoc:springdoc-openapi-ui:1.5.10")
 	implementation("org.springdoc:springdoc-openapi-kotlin:1.5.10")
 
+	ktlint("com.pinterest:ktlint:0.44.0") {
+		attributes {
+			attribute(Bundling.BUNDLING_ATTRIBUTE, objects.named(Bundling.EXTERNAL))
+		}
+	}
+
 	testImplementation("org.springframework.boot:spring-boot-starter-test:2.5.5")
 	testImplementation("org.springframework.amqp:spring-rabbit-test:2.3.9")
 }
+
+val outputDir = "${project.buildDir}/reports/ktlint/"
+val inputFiles = project.fileTree(mapOf("dir" to "src", "include" to "**/*.kt"))
+
+val ktlintCheck by tasks.creating(JavaExec::class) {
+	inputs.files(inputFiles)
+	outputs.dir(outputDir)
+
+	description = "Check Kotlin code style."
+	classpath = ktlint
+	mainClass.set("com.pinterest.ktlint.Main")
+	args = listOf("src/**/*.kt")
+}
+
+val ktlintFormat by tasks.creating(JavaExec::class) {
+	inputs.files(inputFiles)
+	outputs.dir(outputDir)
+	description = "Fix Kotlin code style deviations."
+	classpath = ktlint
+	mainClass.set("com.pinterest.ktlint.Main")
+	args = listOf("-F", "src/**/*.kt")
+	jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
+}
+
 
 tasks.withType<KotlinCompile> {
 	kotlinOptions {
